tests/golden/expected/unknown_field.stdout.txt
Compile error: tests/fixtures/unknown_field.lamp:14: type error: object "widget" of type "item" has no field "nonexistent_field"
  14 | 	nonexistent_field true
    |  ^
